builder controls z-index fix

--- a/features/metaboxes/scss/pix_builder.scss
+++ b/features/metaboxes/scss/pix_builder.scss
@@ -87,7 +87,7 @@ $accent   : #0095ea;
 
 .pixbuilder-grid {
   margin-top: -10px;
-  z-index: 100;
+  z-index: 1000;
 
   // Block Actions
   .item__controls {
